[FIX] mass_mailing, *: prevent dialog overlap of fullscreen editor
*: web_editor

The edition dialog for the marketing campaign overlaps the fullscreen editor
of the mail template destined to that marketing campaign.
- concerns: marketing_automation

How to reproduce:
- create a new marketing campaign and add a new Email activity
- create a new mail template
- choose Event Promo as the Email Template
- open the editor in fullscreen
Issue:
- the dialog for the marketing campaign overlaps the fullscreen editor

Solution:
- Rework and remove the `o_form_fullscreen_ancestor` which was recursively
  applied to all ancestor elements, to use only one class instead,
  `o_mass_mailing_iframe_ancestor_fullscreen`, which is only added to the parent
  of the iframe, and use `position: fixed` instead of `position: static` so that
  it can use a `z-index` allowing the fullscreen editor to be displayed on top
  of the dialog.

task-4178640

X-original-commit: a983ac40b6e3bb00080f4dbfc55c12f6c1356b45
Part-of: odoo/odoo#189225

--- a/addons/mass_mailing/static/src/scss/mass_mailing.wysiwyg.scss
+++ b/addons/mass_mailing/static/src/scss/mass_mailing.wysiwyg.scss
@@ -33,7 +33,7 @@
     .wysiwyg_iframe.o_iframe.has_snippets_sidebar {
         border: none,
     }
-    .o_form_fullscreen_ancestor {
+    .o_mass_mailing_iframe_ancestor_fullscreen {
         // Prevent the website snippets sidebar from overlapping the template
         .wysiwyg_iframe.o_iframe.has_snippets_sidebar {
             padding-right: $o-we-sidebar-width !important;
